pegando os dados pela URL Raw do Github

--- a/Notebooks/data_Science_Introdução_a_Testes.ipynb
+++ b/Notebooks/data_Science_Introdução_a_Testes.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Science - Introdução a Testes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZzYSlhZ6rXg0WzVzKNywE",
+      "authorship_tag": "ABX9TyOdLv7lmUXWQ5gx7KY/j3rV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,18 +42,29 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Ln6B0GwtnIPP"
+      },
+      "source": [
+        "URL = 'https://raw.githubusercontent.com/Helsonfs/Estudos_em_Data_Science_hfs/main/Dados/tmdb_5000_movies.csv'"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 710
         },
         "id": "6XQnZE-FYBuG",
-        "outputId": "bb2ea0b7-ea3a-45b3-ee7f-60cdba386916"
+        "outputId": "40734302-da9c-4112-fb36-db4323987ca5"
       },
       "source": [
-        "tmdb = pd.read_csv('tmdb_5000_movies.csv')\n",
+        "tmdb = pd.read_csv(URL)\n",
         "tmdb.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +244,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -250,7 +261,7 @@
       "source": [
         "tmdb.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +417,7 @@
         "ax.set(xlabel = 'Nota Média', ylabel ='Densidade')\n",
         "ax.set_title('Média de Votos em Filmes no TMDB 5000')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +469,7 @@
         "ax.set(xlabel = 'Nota Média', ylabel ='Frequência')\n",
         "ax.set_title('Média de Votos em Filmes no TMDB 5000')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +522,7 @@
         "ax.set_title('Distribuição de Nota Média dos Filmes do TMDB 5000')\n",
         "ax"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +581,7 @@
       "source": [
         "tmdb.query('vote_average == 0').head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +778,7 @@
       "source": [
         "tmdb.query('vote_average == 10').head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +961,7 @@
         "tmdb_com_mais_de_10_votos = tmdb.query('vote_count >= 10')\n",
         "tmdb_com_mais_de_10_votos.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1116,7 @@
         "ax.set_title('Média de Votos em Filmes no TMDB 5000 dentre os filmes com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,7 +1169,7 @@
         "ax.set_title('Média de Votos em Filmes no TMDB 5000 dentre os filmes com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,7 +1222,7 @@
         "ax.set_title('Distribuição de Nota Média dos Filmes do TMDB 5000 dentre os Filmes com 10 ou mas Votos')\n",
         "ax"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1271,7 +1282,7 @@
         "notas = pd.read_csv('ratings.csv')\n",
         "notas.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1370,7 +1381,7 @@
         "nota_media_por_filme = notas.groupby('movieId').mean()['rating']\n",
         "nota_media_por_filme.head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1408,7 +1419,7 @@
         "ax.set_title('Média de votos em filmes no MovieLens 100k')\n",
         "ax"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1470,7 @@
         "filmes_com_pelo_menos_10_votos = quantidade_de_votos_por_filme.query('rating >= 10').index\n",
         "filmes_com_pelo_menos_10_votos.values"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1488,7 +1499,7 @@
         "nota_media_dos_filmes_com_pelo_menos_10_votos = nota_media_por_filme.loc[filmes_com_pelo_menos_10_votos]\n",
         "nota_media_dos_filmes_com_pelo_menos_10_votos.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1526,7 +1537,7 @@
         "ax.set_title('Média de votos em filmes no MovieLens 100k com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1590,7 @@
         "ax.set_title('Distribuição de votos em filmes no MovieLens 100k com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1637,7 @@
         "ax.set_title('Média de votos em filmes no MovieLens 100k com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1681,7 +1692,7 @@
         "ax.set_title('Média de votos em filmes no TMDB 5000 com 10 ou mais votos')\n",
         "ax"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,7 +1753,7 @@
         "ax.set(xlabel='Número de votos', ylabel='Densidade')\n",
         "ax.set_title('Número de votos em filmes no TMDB 5000 com 10 ou mais votos')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1791,7 +1802,7 @@
       "source": [
         "tmdb.query('budget > 0').budget"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,7 +1844,7 @@
         "ax.set(xlabel='Budget (gastos)s', ylabel='Densidade')\n",
         "ax.set_title('Gastos em filmes no TMDB 5000')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,7 +1893,7 @@
       "source": [
         "tmdb.popularity"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1924,7 +1935,7 @@
         "ax.set(xlabel='Popularidade', ylabel='Densidade')\n",
         "ax.set_title('Popularidade em filmes no TMDB 5000')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1973,7 +1984,7 @@
       "source": [
         "tmdb.runtime.isnull().sum()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2001,7 +2012,7 @@
       "source": [
         "tmdb.runtime.dropna()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2044,7 +2055,7 @@
         "ax.set_title('Tempo de duração em filmes no TMDB 5000')\n",
         "ax"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2101,7 +2112,7 @@
         "ax.grid()\n",
         "ax"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2150,7 +2161,7 @@
       "source": [
         "tmdb.query('runtime>0').runtime.dropna().quantile(0.8)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2174,7 +2185,7 @@
       "source": [
         ""
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     }
   ]
